made minor changes to layout and reduced image sizes

--- a/FastFood.html
+++ b/FastFood.html
@@ -13,7 +13,8 @@
     <!--Font Awesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
-    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css"><link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
     <!--Map and Other JavaScript-->
     <script src="newsletterimage.min.js"></script>
 </head>
@@ -53,8 +54,8 @@
             <div class="col-lg-9 col-md-12" id="mainpage">
                 <div class="container bg-light border rounded shadow my-2 text-center">
                     <h1 class="title pt-lg-4">Fast Food</h1>
-                    <h4 class="description"> Who says the vegans only munched to limp lettuce leaves?! Take a bite</h4>
-                    <p class="changme">Click below to see all the cake, ice-cream, and pasteries London has to offer</p>
+                    <h4 class="description"> Who says the vegans only munched to limp lettuce leaves?! Take a bite of your guilty pleasures, now in vegan form.</h4>
+                    <p class="changme">Click below for vegan pizzas, burgers and even fried chicken (yup, you read right)</p>
                 </div>
                 <div class="container bg-light border rounded shadow my-2">
                     Map here
@@ -64,7 +65,7 @@
             <div class="col-lg-3 col-md-12 " id="sidebar">
                 <div class="container my-2 rounded border RecommendStyle" id="recommended">
                     <h4 class="text-center pt-2 font-weight-bold sidebarHeader mb-1">Star Eats of the Week <i class="far fa-star fa-xs fa-spin"></i></h4>
-                    <h6 class="card-subtitle text-center mb-1">As chosen by Seraphina</h6>
+                    <h6 class="card-subtitle text-center mb-1">As chosen by Hannah</h6>
                     <div class="row no-gutters align-items-center">
                         <div class="col-lg-12 col-sm-6 col-6">
                             <div id="StarEatSlideshow" class="carousel slide" data-ride="carousel" data-intereval="3000">
@@ -83,24 +84,30 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-12 col-sm-6 col-6 rounded">
-                            <p class="minitext mb-1">Images above from
-                                <a href="http://www.newomnivore.com/" target="_blank">The New Omnivore</a>
-                            </p>
-                            <h5 class="card-title mb-1">
-                                <a href="http://templeofseitan.co.uk/" target="_blank">
-                                    Temple of Seitan (Hackney) </a> // <a class="mx-1" href="https://www.instagram.com/templeofseitan/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a> <a class="mx-1" href="https://twitter.com/templeofseitan?lang=en" target="_blank"><i class="fab fa-twitter"></i></a><a class="mx-1" href="https://www.facebook.com/templeofseitan/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            </h5>
-                            <p class="mb-0"><i class="fas fa-map-marker-alt"></i> Hackney, East London</p>
+                            <div class="col-lg-12 col-sm-6 col-6 rounded">
+                                <p class="minitext mb-1">Images above from
+                                    <a href="http://www.newomnivore.com/" target="_blank">The New Omnivore</a>
+                                </p>
 
-                            <div class="pParent">
-                                <p class="text-justify card-text mb-1 pEmph">
-                                    Fried chicken is probably the last thing you’d expect to eat as a vegan. But thanks to Temple of Seitan (or less controversially known as Temple of Hackney) your finger-licking fix = sorted.</p>
-                                <p class="text-right mb-1"><a data-toggle="collapse" href="#readMoreLess" aria-expanded="false" aria-controls="readMoreLess">
+                            </div>
+                            <div class="col-lg-12 col-sm-6 col-6 rounded">
+                                <h5 class="card-title mb-1">
+                                    <a href="http://templeofseitan.co.uk/" target="_blank">
+                                    Temple of Seitan</a> //<a class="mx-1" href="https://www.instagram.com/templeofseitan/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a> <a class="mx-1" href="https://twitter.com/templeofseitan?lang=en" target="_blank"><i class="fab fa-twitter"></i></a><a class="mx-1" href="https://www.facebook.com/templeofseitan/" target="_blank"><i class="fab fa-facebook"></i></a>
+                                </h5>
+                                <p class="mb-0"><i class="fas fa-map-marker-alt"></i> Hackney, East London</p>
+
+                                <div class="pParent">
+                                    <p class="text-justify card-text mb-1 pEmph">
+                                        Fried chicken is probably the last thing you’d expect to eat as a vegan. But thanks to Temple of Seitan (or less controversially known as <em>Temple of Hackney</em>) your finger-licking fix = sorted.</p>
+                                    <p class="text-right mb-1"><a data-toggle="collapse" href="#readMoreLess" aria-expanded="false" aria-controls="readMoreLess">
     Read More/Less... </a></p>
-                                <div class="collapse pParent" id="readMoreLess">
-                                    <p>Tucked away in a corner of Hackney, next to a butchers oddly enough, is perhaps one the most well-known Vegan spots in London. Temple of Seitan has been serving up deep-fried, plant-based goodness to vegans and non-vegans alike since it first opened its doors in January 2017. Since then, the world’s first vegan fried chicken shop has gained a cult-following. With burgers, meal deals and a killer pot of mac & cheese, there really is something for everything. Get yourself down there and see firsthand why omnis are turning Seitanic.</p>
+                                    <div class="collapse pParent" id="readMoreLess">
+                                        <p>Tucked away in a corner of Hackney, next to a butchers oddly enough, is perhaps one the most well-known Vegan spots in London.</p>
+                                        <p> Temple of Seitan has been serving up deep-fried, plant-based goodness to vegans and non-vegans alike since it first opened its doors in January 2017.</p>
+                                        <p> Since then, the world’s first vegan fried chicken shop has gained a cult-following. With burgers, meal deals and a killer pot of mac & cheese, there really is something for everything.
+                                        <p  class="font-weight-bold">Get yourself down there and see first hand why omnis are turning <span class="card-subtitle">Seitanic</span>.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
