--- a/About.html
+++ b/About.html
@@ -49,32 +49,41 @@
     <!--mainPage-->
  <div class="container">
   <div class="row info_1">
-          <div class="col-lg-4">
+          <div class="col-lg-12">
             <h2>About CraVe</h2>
             <p>Cravings is your one-stop destination for all of your plant-based desires. 
    Whether you are vegan, v-curious, or just looking to reduce your meat intake, we're here to make sure you never have to compromise your cravings.</p>
           </div>
-          <div class="col-lg-4">
-            <h2>About Us</h2>
-			<div class="container">
-			<div class="row info_1">
-			<div class="col-lg-6">
-			 <img class="rounded-circle img-fluid" src="img/hannah%20(1).jpg" alt="Hannah"> </div>
-			 Hello Hello 
-			 <div class="container">
-			<div class="row info_1">
-			<div class="col-lg-6">
-				<img class="rounded-circle img-fluid" src="img/Mich.jpg" alt="Michelle"></div>
-				Hello Hello 
-            </div> 
-			</div>
-			</div>
-			</div>
-			</div>
-          <div class="col-lg-4">
+        </div>
+    </div>
+	<div class="container">
+		<div class="row info_1">
+          <div class="col-lg-12">
+		  <article><h2>About Hannah</h2>
+			<img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Michelle">
+				Hello MY NAME IS HANNAH and it is great to meet u </article>
+				</div>
+				</div>
+		<div class="row info_1">
+          <div class="col-lg-12">
+		  <article><h2>About Michelle</h2>
+			<img class="rounded-circle img-fluid img-thumbnail" src="img/mich.jpg" alt="Michelle">
+				Hello Hello </article>
+         
+    </div>
+	</div>
+	</div>
+	</div>
+		
+    </div>
+	</div>
+	</div>
+	</div>
+	<div class="container">
+  <div class="row info_1">
+          <div class="col-lg-12">
             <h2>Feedback</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-              <center><a class="btn btn-secondary" href="#" role="button">Feedback Form <i class="fas fa-long-arrow-alt-right"></i></a></center>
+           <center><a class="btn btn-secondary" href="#" role="button">Feedback Form <i class="fas fa-long-arrow-alt-right"></i></a></center>
           </div>
         </div>
     </div>
