--- a/About.html
+++ b/About.html
@@ -69,9 +69,16 @@
 		  <article><h2>About Michelle</h2>
 			<img class="rounded-circle img-fluid img-thumbnail" src="img/mich.jpg" alt="Michelle">
 				Hello Hello </article>
-         
-    </div>
-	</div>
+          </div>
+			</div>
+			<div class="container">
+		<div class="row info_1">
+          <div class="col-lg-12">
+		  <article><h2>About Seraphina</h2>
+			<img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Michelle">
+				Write me </article>
+				</div>
+				</div>
 	</div>
 	</div>
 		
