Fixed h4s and divs
Now ready to fill in our respective about me sections

--- a/About.html
+++ b/About.html
@@ -52,40 +52,29 @@
           <div class="col-lg-12">
             <h2>About CraVe</h2>
             <p>Cravings is your one-stop destination for all of your plant-based desires. 
-   Whether you are vegan, v-curious, or just looking to reduce your meat intake, we're here to make sure you never have to compromise your cravings.</p>
+   Whether you are vegan, 'v-curious', or a 'reductarian', we're here to make sure you never have to compromise your cravings.</p>
           </div>
         </div>
     </div>
 	<div class="container">
 		<div class="row info_1">
           <div class="col-lg-12">
-		  <article><h2>About Hannah</h2>
+		  <article><h4>Hannah</h4>
 			<img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Michelle">
 				Hello MY NAME IS HANNAH and it is great to meet u </article>
 				</div>
-				</div>
-		<div class="row info_1">
           <div class="col-lg-12">
-		  <article><h2>About Michelle</h2>
+		  <article><h4>Michelle</h4>
 			<img class="rounded-circle img-fluid img-thumbnail" src="img/mich.jpg" alt="Michelle">
 				Hello Hello </article>
-          </div>
-			</div>
-			<div class="container">
-		<div class="row info_1">
-          <div class="col-lg-12">
-		  <article><h2>About Seraphina</h2>
+				</div>
+				<div class="col-lg-12">
+		  <article><h4>Seraphina</h4>
 			<img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Michelle">
 				Write me </article>
 				</div>
 				</div>
-	</div>
-	</div>
-		
-    </div>
-	</div>
-	</div>
-	</div>
+				</div>
 	<div class="container">
   <div class="row info_1">
           <div class="col-lg-12">
