added section about me; made images same size

--- a/About.html
+++ b/About.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
@@ -17,8 +18,9 @@
     <link href="./stylesheets/aboutstylesheet.css" type="text/css" rel="stylesheet">
 </head>
 <!--Navbar-->
+
 <body>
- <nav class="navbar navbar-expand-md navbar-light navStyling display">
+    <nav class="navbar navbar-expand-md navbar-light navStyling display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span><i class="fas fa-cloud fa-4x cloudFloat"></i></span>
   </button>
         <!--navbar Menu-->
@@ -42,45 +44,47 @@
                     <li><a class="nav-link" href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fab fa-twitter"></i></a></li>
                     <li><a class="nav-link" href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fab fa-facebook"></i></a></li>
                 </div>
-                <li class="nav-item"><a class="nav-link active" >About <i class="fas fa-heart" style="color:#EB5E55"></i></a></li>
+                <li class="nav-item"><a class="nav-link active">About <i class="fas fa-heart" style="color:#EB5E55"></i></a></li>
             </ul>
         </div>
     </nav>
     <!--mainPage-->
- <div class="container">
-  <div class="row info_1">
-          <div class="col-lg-12">
-            <h2>About CraVe</h2>
-            <p>Cravings is your one-stop destination for all of your plant-based desires. 
-   Whether you are vegan, 'v-curious', or a 'reductarian', we're here to make sure you never have to compromise your cravings.</p>
-          </div>
+    <div class="container">
+        <div class="row info_1">
+            <div class="col-lg-12">
+                <h2>About CraVe</h2>
+                <p>Cravings is your one-stop destination for all of your plant-based desires. Whether you are vegan, 'v-curious', or a 'reductarian', we're here to make sure you never have to compromise your cravings.</p>
+            </div>
         </div>
     </div>
-	<div class="container">
-		<div class="row info_1">
-          <div class="col-lg-12">
-		  <article><h4>Hannah</h4>
-			<img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Michelle">
-				Hello MY NAME IS HANNAH and it is great to meet u </article>
-				</div>
-          <div class="col-lg-12">
-		  <article><h4>Michelle</h4>
-			<img class="rounded-circle img-fluid img-thumbnail" src="img/mich.jpg" alt="Michelle">
-				Hello Hello </article>
-				</div>
-				<div class="col-lg-12">
-		  <article><h4>Seraphina</h4>
-			<img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Michelle">
-				Write me </article>
-				</div>
-				</div>
-				</div>
-	<div class="container">
-  <div class="row info_1">
-          <div class="col-lg-12">
-            <h2>Feedback</h2>
-           <center><a class="btn btn-secondary" href="#" role="button">Feedback Form <i class="fas fa-long-arrow-alt-right"></i></a></center>
-          </div>
+    <div class="container">
+        <div class="row info_1">
+            <div class="col-lg-12">
+                <article>
+                    <h4>Hannah</h4>
+                    <img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Hannah"> Hello MY NAME IS HANNAH and it is great to meet u </article>
+            </div>
+            <div class="col-lg-12">
+                <article>
+                    <h4>Michelle</h4>
+                    <img class="rounded-circle img-fluid img-thumbnail" src="img/mich.jpg" alt="Michelle">
+                    <p>Heya I'm Michi and I'm one of the websites' creators. Though I am not vegetarian or a vegan, my favourite vegan thing to eat are falafel wraps with lots of salad. About 2 months ago I didn’t know a thing about creating websites, but I’m really glad I signed up to <a href="https://www.codefirstgirls.org.uk/free-community-courses.html">CodeFirst:Girls</a>. I think coding is a skill that anyone can learn if they persist at it, regardless of their age, sex or level of education.</p>
+                    <p>Making this website has made me very hungry, I’m going to get a snack. Say catch to me on <a href="https://twitter.com/Michi__404">Twitter</a>! Tschüss x</p>
+                </article>
+            </div>
+            <div class="col-lg-12">
+                <article>
+                    <h4>Seraphina</h4>
+                    <img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Seraphina"> Write me </article>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row info_1">
+            <div class="col-lg-12">
+                <h2>Feedback</h2>
+                <center><a class="btn btn-secondary" href="#" role="button">Feedback Form <i class="fas fa-long-arrow-alt-right"></i></a></center>
+            </div>
         </div>
     </div>
     <footer class="text-center">
@@ -91,5 +95,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body> </html>
+</body>
 
+</html>
