--- a/index.html
+++ b/index.html
@@ -85,14 +85,18 @@
                         </div>
                         <div>
                             <a class="btn my-2 ourButton" href="#" id="Surprise" onclick="surpriseMeEats()" target="_blank" onmouseover="explanation(this)" onmouseout="explanationAway(this)">Surprise Me!</a>
-                                <div class="position-relative font-weight-bold"><p class="text-center mb-0 surpiseExplain" id="explaining"></p></div>
+                        </div>
+                        <div class="parExplain font-weight-bold">
+                            <p class="text-center mb-0 surpiseExplain d-none d-md-block" id="explaining"></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <div>
+        <p class="text-center mb-2 surpiseExplain d-md-none d-block"> Unsure? Click the <em>Surprise Me</em> button to get a random vegan restaurant.</p>
+    </div>
     <footer>
         <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-seedling fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
         </div>
