minified index css stylesheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
@@ -15,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
     <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="./stylesheets/indexstylesheet.css" type="text/css" rel="stylesheet">
+    <link href="./stylesheet-min/indexstylesheet.min.css" type="text/css" rel="stylesheet">
 </head>
 
 <body class="text-center gradient_bluepink_bkgrnd">
