Hannah's text and form
Added in my text and put in a Google form via iframe

--- a/About.html
+++ b/About.html
@@ -62,7 +62,13 @@
             <div class="col-lg-12">
                 <article>
                     <h4>Hannah</h4>
-                    <img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Hannah"> Hello MY NAME IS HANNAH and it is great to meet u </article>
+                    <img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Hannah"> 
+					<p>Hello World! I’m Hannah – a 20 year old student from Bath University.</p>
+					<p>I have been a Pescatarian since the age of six. In 2017, I tried to transition to a Veganism, a.k.a my ‘Seagan’ phase.</p>
+					<p>After reading Fat Gay Vegan’s Fat Gay Vegan: Eat, Drink and Live Like You Give a Sh!t, I decided to dive headfirst into fully fledged Veganism. After a rocky start (I may have broken down and had a packet of mini cheddars), I have now been plant-based for 2 months.</p>
+					<p>Despite living in London, one of the most Vegan-friendly cities in the world, I often feel like my only snacking options are a piece of fruit or a falafel wrap. So, this website was partially inspired by my inability to shut up about how much I miss the 3 big c’s – cake, chocolate and cheese.</p>
+					<p>I hope to continue developing the features of this website with the arsenal of skills I’ve learnt over the past 8 weeks.</p>
+ </article>
             </div>
             <div class="col-lg-12">
                 <article>
@@ -83,7 +89,7 @@
         <div class="row info_1">
             <div class="col-lg-12">
                 <h2>Feedback</h2>
-                <center><a class="btn btn-secondary" href="#" role="button">Feedback Form <i class="fas fa-long-arrow-alt-right"></i></a></center>
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfIyntatJ6tibAUb3pFgl33AL4uEvZjReap2fONyxG4cYxITg/viewform?embedded=true" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div>
         </div>
     </div>
