--- a/About.html
+++ b/About.html
@@ -51,15 +51,15 @@
     <!--mainPage-->
     <div class="container">
         <div class="row info_1">
-            <div class="col-lg-12">
-                <h2>About CraVe</h2>
+            <div class="col-lg-12 rounded border newsletter style">
+                <h2>About Cra<span class="font-weight-bold">Ve</span></h2>
                 <p>Cravings is your one-stop destination for all of your plant-based desires. Whether you are vegan, 'v-curious', or a 'reductarian', we're here to make sure you never have to compromise your cravings.</p>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row info_1">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rounded border">
                 <article>
                     <h4>Hannah</h4>
                     <img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Hannah"> 
@@ -70,7 +70,7 @@
 					<p>I hope to continue developing the features of this website with the arsenal of skills I’ve learnt over the past 8 weeks.</p>
  </article>
             </div>
-            <div class="col-lg-12">
+            <div class="col-lg-12 rounded border">
                 <article>
                     <h4>Michelle</h4>
                     <img class="rounded-circle img-fluid img-thumbnail" src="img/Mich.jpg" alt="Michelle">
@@ -78,24 +78,27 @@
                     <p>Making this website has made me very hungry, I’m going to get a snack. Say catch to me on <a href="https://twitter.com/Michi__404">Twitter</a>! Tschüss x</p>
                 </article>
             </div>
-            <div class="col-lg-12">
+            <div class="col-lg-12 rounded border">
                 <article>
                     <h4>Seraphina</h4>
                     <img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Seraphina"> Write me </article>
             </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row info_1">
-            <div class="col-lg-12">
-                <h2>Feedback</h2>
-				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfIyntatJ6tibAUb3pFgl33AL4uEvZjReap2fONyxG4cYxITg/viewform?embedded=true" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-            </div>
-        </div>
-    </div>
-    <footer class="text-center">
-        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-seedling fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
-        </div>
+			</div>
+		<div class="row info_1">
+                        <div class="col-lg-12 col-sm-6 col-6 rounded border">
+                            <form>
+                                <div>
+                                    <label for="question"> My email address is</label>
+                                    <input type="email" id="email" placeholder="feedbackplz@ritenow.co.uk" style="width:100%" required>
+                                </div>
+                                <button type="submit" class="btn my-2 ourButton2"> Submit!</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+				</div>
+				</div>
+				</div>
     </footer>
     <!--    Bootstrap JavaScript CDNs-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
