--- a/About.html
+++ b/About.html
@@ -54,6 +54,9 @@
             <div class="col-lg-12 rounded border newsletter style">
                 <h2>About Cra<span class="font-weight-bold">Ve</span></h2>
                 <p>Cravings is your one-stop destination for all of your plant-based desires. Whether you are vegan, 'v-curious', or a 'reductarian', we're here to make sure you never have to compromise your cravings.</p>
+				<p>By providing you with up-to-date information about the locations of Vegan restaurants, cafes and pubs in London, we hope to make existing and transitioning Vegan’s journeys that bit easier.</p>
+				<p>We also want to show those wishing to incorporate more plant-based food into their diets that they do not need to compromise on variety or flavour. There is so much plant-based goodness out there and Cra<span class="font-weight-bold">Ve</span> is here to help you track it down.</p>
+
             </div>
         </div>
     </div>
@@ -85,19 +88,20 @@
             </div>
 			</div>
 		<div class="row info_1">
-                        <div class="col-lg-12 col-sm-6 col-6 rounded border">
+                        <div class="col-lg-12 rounded border">
                             <form>
                                 <div>
-                                    <label for="question"> My email address is</label>
+                                    <label for="question"> <h5>My email address is:</h5></label>
                                     <input type="email" id="email" placeholder="feedbackplz@ritenow.co.uk" style="width:100%" required>
                                 </div>
+									<br>
+									<label for="question"> <h5>I really gotta say that...</h5></label>
+								<textarea name="comment" type="comment" class="validate[required,length[6,300]] feedback-input" id="feedback-comment" required placeholder="Express yourself"></textarea>
                                 <button type="submit" class="btn my-2 ourButton2"> Submit!</button>
                             </form>
                         </div>
                     </div>
                 </div>
-				</div>
-				</div>
 				</div>
     </footer>
     <!--    Bootstrap JavaScript CDNs-->
