--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
 </head>
 <!--Navbar-->
 
-<body>
+<body class="background">
     <nav class="navbar navbar-expand-md navbar-light navStyling display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span><i class="fas fa-cloud fa-4x cloudFloat"></i></span>
   </button>
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
-                <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
+                <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot <i class="fas fa-map-marker-alt" ></i></a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="fas fa-comment-dots"></i></a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
