--- a/FastFood.html
+++ b/FastFood.html
@@ -17,9 +17,10 @@
     <link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
     <!--Map and Other JavaScript-->
     <script src="newsletterimage.min.js"></script>
+    <script src="FFmap.js"></script>
 </head>
 
-<body class="gradient_bluepink_bkgrnd">
+<body>
     <nav class="text-center navbar navbar-expand-md navbar-light navStyling display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span><i class="fas fa-cloud fa-4x cloudFloat"></i></span>
   </button>
@@ -170,6 +171,8 @@
         <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with <i class="fas fa-seedling fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
         </div>
     </footer>
+    <!--Google Maps-->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhrxfuKqW8KekcODs4hUJUDrbJ4shPE0c&callback=initMap" type="text/javascript"></script>
     <!--    Bootstrap JavaScript CDNs-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
