minified ST javascript map too

--- a/SweetTreats.html
+++ b/SweetTreats.html
@@ -19,7 +19,7 @@
     <link href="./stylesheet-min/STstylesheet.min.css" rel="stylesheet" type="text/css">
     <!--Map and Other JavaScript-->
     <script src="newsletterimage.min.js"></script>
-    <script src="STmap.js"></script>
+    <script src="STmap.min.js"></script>
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
