--- a/About.html
+++ b/About.html
@@ -65,7 +65,7 @@
             <div class="col-lg-12 rounded border">
                 <article>
                     <h4>Hannah</h4>
-                    <img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Hannah"> 
+                    <img class="rounded-circle img-fluid img-thumbnail" src="img/hannah%20(1).jpg" alt="Hannah">
 					<p>Hello World! I’m Hannah – a 20 year old student from Bath University.</p>
 					<p>I have been a Pescatarian since the age of six. In 2017, I tried to transition to a Veganism, a.k.a my ‘Seagan’ phase.</p>
 					<p>After reading Fat Gay Vegan’s Fat Gay Vegan: Eat, Drink and Live Like You Give a Sh!t, I decided to dive headfirst into fully fledged Veganism. After a rocky start (I may have broken down and had a packet of mini cheddars), I have now been plant-based for 2 months.</p>
@@ -84,7 +84,10 @@
             <div class="col-lg-12 rounded border">
                 <article>
                     <h4>Seraphina</h4>
-                    <img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Seraphina"> Write me </article>
+                    <img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Seraphina">
+                    <p> Hello I'm Seraphina, I have been vegetarian my whole life and I have experimented with Veganism. I love Asian food including sushi, bao and ramen! I also love to watch movies and can always recommend a good film! Netflix has some great documentaries including; 'Cowspiracy', 'What the Health' and 'Forks over Knives',you should check out them out if you want to learn more about Veganism. </p>
+<p> I am excited to learn more coding skills and to develop my abilities and add more to the website and build more exciting things! </p>
+                  </article>
             </div>
 			</div>
 		<div class="row info_1">
