finished world food js map and linked minified to results page

--- a/WorldFood.html
+++ b/WorldFood.html
@@ -16,7 +16,7 @@
     <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
     <link href="./stylesheets/WFstylesheet.css" rel="stylesheet" type="text/css">
     <!--Map and Other JavaScript-->
-    <script src="WFmap.js"></script>
+    <script src="WFmap.min.js"></script>
     <script src="newsletterimage.min.js"></script>
 </head>
 
