--- a/FastFood.html
+++ b/FastFood.html
@@ -17,7 +17,7 @@
     <link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
     <!--Map and Other JavaScript-->
     <script src="newsletterimage.min.js"></script>
-    <script src="FFmap.js"></script>
+    <script src="FFmap.min.js"></script>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
             <div class="col-lg-9 col-md-12" id="mainpage">
                 <div class="container bg-light border rounded shadow my-2 text-center">
                     <h1 class="title pt-lg-4">Fast Food</h1>
-                    <h4 class="description"> Who says the vegans only munched to limp lettuce leaves?! Take a bite of your guilty pleasures, now in vegan form.</h4>
+                    <h4 class="description"> Who says the vegans only munched to limp lettuce leaves?! Take a bite of your fast food guilty pleasures, now in vegan form.</h4>
                     <p class="changme">Click below for vegan pizzas, burgers and even fried chicken (yup, you read right)</p>
                 </div>
                 <div class="container bg-light border rounded shadow my-2">
