--- a/FastFood.html
+++ b/FastFood.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
     <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheet-min/FFstylesheet.min.css" rel="stylesheet" type="text/css">
     <!--Map and Other JavaScript-->
     <script src="newsletterimage.min.js"></script>
     <script src="FFmap.min.js"></script>
