--- a/SuggestaSpot.html
+++ b/SuggestaSpot.html
@@ -53,6 +53,9 @@
             <p> Found an awesome spot we don't know about yet? Spill the beans!</p>
         </div>
         <div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf7-_nrIEEkL7S0qEKQEI2C_-55oDXWBEMDyNOO7bMUYgGKsQ/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+
             <!--
                     <form action="#" method="post">
 
@@ -65,12 +68,7 @@
             <input type="submit" onclick="myfunction()" value="Submit">
 
         </form>
--->You should insert your google form here
-       Your form should ask if..
-       The person submitting is a business or not
-       What category it belongs in (sweet treats, fast food, world food)
-       Their comments
-       Other obvs details
+-->
         </div>
     </div>
 <footer class="text-center"> <!--    Dont worry about the footer being so close, it will move down the more things you add abover it-->
