Background to Suggest a Spot and Fixed Suggest a Spot Link on About Page
Added a gradient background so suggest a spot- possibly change the colours?
Missing linkfor suggest a spot on about page

--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
-                <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot <i class="fas fa-map-marker-alt" ></i></a></li>
+                <li class="nav-item text-nowrap"><a class="nav-link" href="SuggestaSpot.html">Suggest a Spot <i class="fas fa-map-marker-alt" ></i></a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="fas fa-comment-dots"></i></a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
@@ -71,7 +71,7 @@
 					<p>After reading Fat Gay Vegan’s Fat Gay Vegan: Eat, Drink and Live Like You Give a Sh!t, I decided to dive headfirst into fully fledged Veganism. After a rocky start (I may have broken down and had a packet of mini cheddars), I have now been plant-based for 2 months.</p>
 					<p>Despite living in London, one of the most Vegan-friendly cities in the world, I often feel like my only snacking options are a piece of fruit or a falafel wrap. So, this website was partially inspired by my inability to shut up about how much I miss the 3 big c’s – cake, chocolate and cheese.</p>
 					<p>I hope to continue developing the features of this website with the arsenal of skills I’ve learnt over the past 8 weeks.</p>
- </article>
+                 </article>
             </div>
             <div class="col-lg-12 rounded border">
                 <article>
@@ -86,10 +86,10 @@
                     <h4>Seraphina</h4>
                     <img class="rounded-circle img-fluid img-thumbnail" src="img/Seraphina.png" alt="Seraphina">
                     <p> Hello I'm Seraphina, I have been vegetarian my whole life and I have experimented with Veganism. I love Asian food including sushi, bao and ramen! I also love to watch movies and can always recommend a good film! Netflix has some great documentaries including; 'Cowspiracy', 'What the Health' and 'Forks over Knives',you should check out them out if you want to learn more about Veganism. </p>
-<p> I am excited to learn more coding skills and to develop my abilities and add more to the website and build more exciting things! </p>
-                  </article>
+                    <p> I am excited to learn more coding skills and to develop my abilities and add more to the website and build more exciting things! </p>
+                </article>
             </div>
-			</div>
+        </div>
 		<div class="row info_1">
                         <div class="col-lg-12 rounded border">
                             <form>
@@ -105,7 +105,9 @@
                         </div>
                     </div>
                 </div>
-				</div>
+    <footer>
+        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-seedling fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
+        </div>
     </footer>
     <!--    Bootstrap JavaScript CDNs-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
