--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                             </div>
                             <div class="row">
                                 <p class="description
-                    col-md-12 nopadding_bt mx-auto text-nowrap">Stop the <span class="hangryRed">Hanger</span> and <span class="treat font-weight-bold">Treat Yourself!</span></p>
+                    col-md-12 nopadding_bt mx-auto text-nowrap">Feeling <span class="hangryRed">Hangry?</span> why not <span class="treat font-weight-bold">Treat Yourself?!</span></p>
                             </div>
                         </div>
                     </header>
                     <main class="container pb-xs-3 pb-md-1">
                         <div class="row">
-                            <p class="lead nopadding_bt"> Sate your cravings and your conscience with our tasty <span class="lead_ve font-weight-bold">vegan</span> versions of the non-vegan food you love, right here in London.</p>
+                            <p class="lead nopadding_bt"> Sate your cravings and your conscience with our tasty <span class="lead_ve font-weight-bold">Vegan</span> versions of the non-Vegan food you love, right here in London.</p>
                         </div>
                     </main>
                     <!--Choices-->
