--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="row">
                                 <p class="description
-                    col-md-12 nopadding_bt mx-auto text-nowrap">Feeling <span class="hangryRed">Hangry?</span> why not <span class="treat font-weight-bold">Treat Yourself?!</span></p>
+                    col-md-12 nopadding_bt mx-auto text-nowrap">Feeling <span class="hangryRed">Hangry?</span> Why not <span class="treat font-weight-bold">Treat Yourself?!</span></p>
                             </div>
                         </div>
                     </header>
