--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     <!--Font Awesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
-    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
+ <link href="./stylesheet-min/consistencystylesheet.min.css" rel="stylesheet" type="text/css">
     <link href="./stylesheets/aboutstylesheet.css" type="text/css" rel="stylesheet">
 </head>
 <!--Navbar-->
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
-                <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot <i class="fas fa-map-marker-alt" ></i></a></li>
+                <li class="nav-item text-nowrap"><a class="nav-link" href="SuggestaSpot.html">Suggest a Spot <i class="fas fa-map-marker-alt" ></i></a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="fas fa-comment-dots"></i></a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
