--- a/SuggestaSpot.html
+++ b/SuggestaSpot.html
@@ -12,7 +12,7 @@
     <!--Font Awesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
-    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
+ <link href="./stylesheet-min/consistencystylesheet.min.css" rel="stylesheet" type="text/css">
     <link href="suggestspotstylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
